// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render BlogForm correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Post Title"
    type="text"
    value=""
  />
  <Quill
    modules={Object {}}
    onChange={[Function]}
    theme="snow"
    value=""
  />
  <input
    className="button"
    type="submit"
    value="Save Post"
  />
</form>
`;

exports[`should render BlogForm correctly with blog data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Post Title"
    type="text"
    value="Write a Angular app"
  />
  <Quill
    modules={Object {}}
    onChange={[Function]}
    theme="snow"
    value="Directives, Lazy Load"
  />
  <input
    className="button"
    type="submit"
    value="Save Post"
  />
</form>
`;
